z-index fix lists

--- a/nextjs-gramjegerne/src/app/globals.css
+++ b/nextjs-gramjegerne/src/app/globals.css
@@ -239,7 +239,7 @@ li.product-list {
 }
 li.product-list:hover {
   scale: 1.02;
-  z-index: 500;
+
   transition: scale 0.5s ease;
   outline: 2px solid var(--fg-accent);
   outline-offset: 0px;
